--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html> // Define que o tipo de documento é HTML
+<!DOCTYPE html> <!-- Define que o tipo de documento é HTML --> 
 <html lang="pt-br">
-<head> // Configuração: Geralmente vai tags de titulo da page, meta tags e tags que chamam arquivos
+<head> <!-- Configuração: Geralmente vai tags de titulo da page, meta tags e tags que chamam arquivos --> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning HTML</title>
@@ -8,11 +8,14 @@
 <body> // Corpo da nossa page
     <h1>Hello world!!!</h1>
 
-    // explorando headings
+    <!-- explorando headings -->
     <h2>Heading 2</h2>
     <h3>Heading 3</h3>
     <h4>Heading 4</h4>
     <h5>Heading 5</h5>
     <h6>Heading 6</h6>
+
+    <!-- explorando links -->
+    <p>Para saber mais, clique <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">aqui</a></p>
 </body>
 </html>
