learning table tags

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,5 +17,6 @@
 
     <!-- explorando links -->
     <p>Para saber mais, clique <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">aqui</a></p>
+    <img src="src/png-transparent-node-js-javascript-software-developer-express-js-computer-software-node-js-logo-nodejs-software-development-thumbnail.png" alt="Imagem node JS">
 </body>
 </html>
