--- a/CSS/index.html
+++ b/CSS/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Red</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis deserunt ullam harum consequuntur. Aliquid, aperiam et commodi, voluptatibus inventore sunt totam ut adipisci aspernatur magnam, quaerat quae maxime repellendus mollitia!</p>
 </body>
 </html>
