--- a/CSS/index.html
+++ b/CSS/index.html
@@ -9,5 +9,11 @@
 <body>
     <h1>Red</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis deserunt ullam harum consequuntur. Aliquid, aperiam et commodi, voluptatibus inventore sunt totam ut adipisci aspernatur magnam, quaerat quae maxime repellendus mollitia!</p>
+    
+    <p class="p-texto">Texto de classe</p>
+    <p class="p-texto">Texto de classe</p>
+    <p class="p-texto">Texto de classe</p>
+
+    <p id="titulo-app">Texto de ID</p>
 </body>
 </html>
