different types of set colors

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -7,6 +7,7 @@
     <title>Learning CSS</title>
 </head>
 <body>
+    <div>
     <h1>Red</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis deserunt ullam harum consequuntur. Aliquid, aperiam et commodi, voluptatibus inventore sunt totam ut adipisci aspernatur magnam, quaerat quae maxime repellendus mollitia!</p>
     
@@ -15,5 +16,12 @@
     <p class="p-texto">Texto de classe</p>
 
     <p id="titulo-app">Texto de ID</p>
+    </div>
+
+    <div class="addColor">
+        <p class="colorName">Nome da cor</p>
+        <p class="hexaCodeColor">Hexadecimal</p>
+        <p class="rgba">RGBA</p>
+    </div>
 </body>
 </html>
