--- a/CSS/index.html
+++ b/CSS/index.html
@@ -18,7 +18,7 @@
     <p id="titulo-app">Texto de ID</p>
     </div>
 
-    <div class="addColor">
+    <div>
         <p class="colorName">Nome da cor</p>
         <p class="hexaCodeColor">Hexadecimal</p>
         <p class="rgba">RGBA</p>
