--- a/CSS/index.html
+++ b/CSS/index.html
@@ -7,6 +7,7 @@
     <title>Learning CSS</title>
 </head>
 <body>
+    <a href="background.html">Learn background</a>
     <div>
     <h1>Red</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis deserunt ullam harum consequuntur. Aliquid, aperiam et commodi, voluptatibus inventore sunt totam ut adipisci aspernatur magnam, quaerat quae maxime repellendus mollitia!</p>
