--- a/CSS/background.html
+++ b/CSS/background.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>backgrounds and fonts</title>
 </head>
 <body>
     <div class="div-background">
         <h1 class="title-background">Learning about background</h1>
+    </div>
+
+    <div >
+        <p class="family">Family fonts</p>
+        <p class="family serif"> Family </p>
+        <p class="family sans-serif"> Family </p>
+        <p class="family monospace"> Family </p>
     </div>
 </body>
 </html>
