--- a/CSS/boxmodel.html
+++ b/CSS/boxmodel.html
@@ -12,5 +12,11 @@
         <p class="p-box">Lorem Ipsum, dolor sit amet 2</p>
         <p class="p-box">Lorem Ipsum, dolor sit amet 3</p>
     </div>
+
+    <div class="boxmodel">
+        <p class="p-box">Lorem Ipsum, dolor sit amet 1</p>
+        <p class="p-box">Lorem Ipsum, dolor sit amet 2</p>
+        <p class="p-box">Lorem Ipsum, dolor sit amet 3</p>
+    </div>
 </body>
 </html>
