--- a/CSS/float.html
+++ b/CSS/float.html
@@ -24,7 +24,8 @@
 
         <div class="div-float">
             <img class="img-float" src="../assets/js.png">
-            <p class="p-float">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore quam error magnam accusantium illo, quasi veniam voluptatum quibusdam facilis dolore, quisquam eum ea ex architecto doloremque voluptate fugit quia impedit.
+            <p class="float-right">HERE RIGHT</p>
+            <p class="p-float clear">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore quam error magnam accusantium illo, quasi veniam voluptatum quibusdam facilis dolore, quisquam eum ea ex architecto doloremque voluptate fugit quia impedit.
             Illum nesciunt aperiam molestiae porro dicta, eius vel aut harum, pariatur inventore odit? Animi quia consequuntur iste ratione, voluptatum dolorem sint in reprehenderit obcaecati aliquam libero recusandae dignissimos, amet dicta?</p>
         </div>
     </div>
